fix overflow

--- a/src/styles/components/ui/ShoppingList.css
+++ b/src/styles/components/ui/ShoppingList.css
@@ -1,5 +1,5 @@
 .shopping-list-content {
-    height: 100vh;
+    height: 100dvh;
     padding: 0 2.5vw;
     padding-top: 2.5vw;
     background-color:#FFF0DE;
